// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build-sandbox builds a sandbox from a package with deps 1`] = `
Object {
  "buildCommand": Array [],
  "buildType": "out-of-source",
  "dependencies": Map {
    "dep-0.1.0" => Object {
      "buildCommand": Array [],
      "buildType": "out-of-source",
      "dependencies": Map {},
      "errors": Array [],
      "exportedEnv": Object {},
      "id": "dep-0.1.0",
      "installCommand": Array [],
      "name": "dep",
      "packageJson": Object {
        "dependencies": Object {},
        "devDependencies": Object {},
        "esy": Object {
          "build": null,
          "buildsInSource": false,
          "exportedEnv": Object {},
          "install": null,
        },
        "name": "dep",
        "peerDependencies": Object {},
        "version": "0.1.0",
      },
      "shouldBePersisted": false,
      "sourcePath": "node_modules/dep",
      "sourceType": "transient",
      "version": "0.1.0",
    },
  },
  "errors": Array [],
  "exportedEnv": Object {},
  "id": "app-0.1.0",
  "installCommand": Array [],
  "name": "app",
  "packageJson": Object {
    "dependencies": Object {
      "dep": "*",
    },
    "devDependencies": Object {},
    "esy": Object {
      "build": null,
      "buildsInSource": false,
      "exportedEnv": Object {},
      "install": null,
    },
    "name": "app",
    "peerDependencies": Object {},
    "version": "0.1.0",
  },
  "shouldBePersisted": false,
  "sourcePath": "",
  "sourceType": "root",
  "version": "0.1.0",
}
`;

exports[`build-sandbox builds a sandbox from a single package 1`] = `
Object {
  "buildCommand": Array [],
  "buildType": "out-of-source",
  "dependencies": Map {},
  "errors": Array [],
  "exportedEnv": Object {},
  "id": "app-0.1.0",
  "installCommand": Array [],
  "name": "app",
  "packageJson": Object {
    "dependencies": Object {},
    "devDependencies": Object {},
    "esy": Object {
      "build": null,
      "buildsInSource": false,
      "exportedEnv": Object {},
      "install": null,
    },
    "name": "app",
    "peerDependencies": Object {},
    "version": "0.1.0",
  },
  "shouldBePersisted": false,
  "sourcePath": "",
  "sourceType": "root",
  "version": "0.1.0",
}
`;

exports[`build-sandbox error: circular deps 1`] = `
Object {
  "buildCommand": Array [],
  "buildType": "out-of-source",
  "dependencies": Map {
    "dep-0.1.0" => Object {
      "buildCommand": Array [],
      "buildType": "out-of-source",
      "dependencies": Map {},
      "errors": Array [
        Object {
          "message": "Circular dependency \\"app\\" found
  At app -> dep",
        },
      ],
      "exportedEnv": Object {},
      "id": "dep-0.1.0",
      "installCommand": Array [],
      "name": "dep",
      "packageJson": Object {
        "dependencies": Object {
          "app": "*",
        },
        "devDependencies": Object {},
        "esy": Object {
          "build": null,
          "buildsInSource": false,
          "exportedEnv": Object {},
          "install": null,
        },
        "name": "dep",
        "peerDependencies": Object {},
        "version": "0.1.0",
      },
      "shouldBePersisted": false,
      "sourcePath": "node_modules/dep",
      "sourceType": "transient",
      "version": "0.1.0",
    },
  },
  "errors": Array [
    Object {
      "message": "Circular dependency \\"app\\" found
  At app -> dep",
    },
  ],
  "exportedEnv": Object {},
  "id": "app-0.1.0",
  "installCommand": Array [],
  "name": "app",
  "packageJson": Object {
    "dependencies": Object {
      "dep": "*",
    },
    "devDependencies": Object {},
    "esy": Object {
      "build": null,
      "buildsInSource": false,
      "exportedEnv": Object {},
      "install": null,
    },
    "name": "app",
    "peerDependencies": Object {},
    "version": "0.1.0",
  },
  "shouldBePersisted": false,
  "sourcePath": "",
  "sourceType": "root",
  "version": "0.1.0",
}
`;

exports[`build-sandbox error: missing a dep 1`] = `
Object {
  "buildCommand": Array [],
  "buildType": "out-of-source",
  "dependencies": Map {},
  "errors": Array [
    Object {
      "message": "Cannot resolve \\"dep\\" packages
  At app
  Did you forget to run \\"esy install\\" command?",
    },
  ],
  "exportedEnv": Object {},
  "id": "app-0.1.0",
  "installCommand": Array [],
  "name": "app",
  "packageJson": Object {
    "dependencies": Object {
      "dep": "*",
    },
    "devDependencies": Object {},
    "esy": Object {
      "build": null,
      "buildsInSource": false,
      "exportedEnv": Object {},
      "install": null,
    },
    "name": "app",
    "peerDependencies": Object {},
    "version": "0.1.0",
  },
  "shouldBePersisted": false,
  "sourcePath": "",
  "sourceType": "root",
  "version": "0.1.0",
}
`;
